--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Mon Aug 22 09:58:11 AEST 2016
+#Thu Aug 25 12:59:08 AEST 2016
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=caching-project.xml
 domain=default
-config.resources=maven-project.xml
